--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -4,10 +4,11 @@
 
 
     <item android:id="@+id/menu_new_message"
-        android:title="New Message"
+        android:title="Neue Nachricht"
         app:showAsAction="ifRoom"/>
 
     <item android:id="@+id/menu_sign_out"
+android:icon="@drawable/ic__logout"
         android:title="Sign Out"
         app:showAsAction="ifRoom"/>
 
