--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -10,19 +10,22 @@
     android:paddingLeft="15dp"
     android:paddingBottom="15dp">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="72dp"
+        android:layout_height="72dp"
         app:srcCompat="@mipmap/ic_launcher"
-        android:id="@+id/imageView"
+        app:civ_border_width="2dp"
+        app:civ_border_color="#7777FD"
+        android:id="@+id/navheader_imageView"
         android:layout_marginBottom="15dp"/>
 
     <TextView
+        android:id="@+id/navheader_TextView_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Title"
         android:textColor="#FFFFFF"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <TextView
         android:layout_width="wrap_content"
