--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:background="#4CAF50"
+    android:background="@drawable/background_nav_header"
     android:orientation="vertical"
     android:gravity="bottom"
     android:paddingLeft="15dp"
