--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -3,13 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <item android:id="@+id/menu_new_message"
+    <item
+        android:id="@+id/menu_new_message"
+        android:icon="@drawable/ic_messages_2"
         android:title="Neue Nachricht"
         app:showAsAction="ifRoom"/>
 
-    <item android:id="@+id/menu_sign_out"
-android:icon="@drawable/ic__logout"
-        android:title="Sign Out"
-        app:showAsAction="ifRoom"/>
 
 </menu>
