--- a/app/src/main/res/menu/nav_menu2.xml
+++ b/app/src/main/res/menu/nav_menu2.xml
@@ -5,25 +5,30 @@
         <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/ic_profile"
-            android:title="Profile"/>
+            android:title="Profil"/>
         <item
             android:id="@+id/nav_messages"
             android:icon="@drawable/ic_messages"
-            android:title="Messages"/>
+            android:title="Neue Nachricht"/>
+        <item
+            android:id="@+id/nav_messages_urgent"
+            android:icon="@drawable/ic_messages_urgent"
+            android:title="Schnelle Hilfe"/>
+
 
     </group>
 
 
-    <item android:title="Account Settings">
+    <item android:title="Einstellungen">
         <menu>
             <item
                 android:id="@+id/nav_update"
                 android:icon="@drawable/ic_update"
-                android:title="Update Profile"/>
+                android:title="Profil ändern"/>
             <item
                 android:id="@+id/nav_logout"
                 android:icon="@drawable/ic__logout"
-                android:title="Sign Out"/>
+                android:title="Abmelden"/>
         </menu>
     </item>
 </menu>
